Iris: persisting data with services

--- a/partial/edit.html
+++ b/partial/edit.html
@@ -2,7 +2,7 @@
   <h1>Edit your profile</h1>
   <form>
     <h4>First Name</h4>
-    <input type="text" ng-model="name" \>
+    <input type="text" ng-model="user.name" \>
     <h4>Last Name</h4>
     <input type="text" ng-model="lastName" \>
     <h4>Your Email</h4>
@@ -12,11 +12,8 @@
 
 </form>
 
-
-
-
 <br>
-  <a href="#/view" ng-click="save()">Save Profile</a>
-  
+  <a href="#/view">Save Profile</a>
+
 
 </section>
