--- a/partial/view.html
+++ b/partial/view.html
@@ -1,9 +1,9 @@
 <div>
   <h1>Your Profile</h1>
-  <h2>{{name}}</h2>
+  <h2>{{user.name}}</h2>
   <h2>{{lastName}}</h2>
   <h2>{{email}}</h2>
   <h2>{{phoneNumber}}</h2>
   <br>
-  <a href="#/edit" ng-click="">ReEdit</a>
+  <a href="#/edit"s>ReEdit</a>
 </div>
